<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x2dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:orientation="vertical">

            <com.android.structure.widget.AnyTextView
                android:id="@+id/txtLabName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/x6dp"
                android:text="HB"
                android:textColor="@color/txtBlue"
                android:textSize="@dimen/s12"
                app:typeface="@string/font_bold" />

            <com.android.structure.widget.AnyTextView
                android:id="@+id/txtRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingRight="@dimen/x6dp"
                android:text="(0-100)"
                android:textColor="@color/txtBlue"
                android:textSize="@dimen/s10"
                app:typeface="@string/font_regular" />

        </LinearLayout>


        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/seperator_light_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/x5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.android.structure.widget.AnyTextView
                    android:id="@+id/txtResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/x2dp"
                    android:text="NON REACTIVE"
                    android:textColor="@color/txtBlue"
                    android:textSize="@dimen/s13"
                    app:typeface="@string/font_medium" />


                <com.android.structure.widget.AnyTextView
                    android:id="@+id/txtUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="g/dl"
                    android:textColor="@color/txtDarkGrey"
                    android:textSize="@dimen/s10"
                    app:typeface="@string/font_regular" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.android.structure.widget.AnyTextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/x3dp"
                    android:text="01-01-2099"
                    android:textColor="@color/txtBlue"
                    android:textSize="@dimen/s9"
                    app:typeface="@string/font_regular" />


            </LinearLayout>


        </LinearLayout>


        <com.android.structure.widget.AnyTextView
            android:id="@+id/txtState"
            android:layout_width="@dimen/x40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x3dp"
            android:layout_marginRight="@dimen/x3dp"
            android:background="@drawable/rounded_stroke_red"
            android:gravity="center"
            android:paddingBottom="@dimen/x2dp"
            android:paddingLeft="@dimen/x4dp"
            android:paddingRight="@dimen/x4dp"
            android:paddingTop="@dimen/x2dp"
            android:singleLine="true"
            android:text="High"
            android:textColor="@color/base_dark_gray"
            android:textSize="@dimen/s10"
            app:typeface="@string/font_regular" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/seperator_light_gray" />

</LinearLayout>