<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/x300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_box_white_more_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/x10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <com.android.structure.widget.AnyTextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="Enter PIN"
                android:textColor="@color/base_amber"
                android:textSize="@dimen/s16"
                app:typeface="@string/font_bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.android.structure.widget.AnyTextView
                android:id="@+id/txtWrongPinNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="@dimen/x10dp"
                android:singleLine="true"
                android:text="Invalid PIN"
                android:textColor="@color/base_reddish"
                android:textSize="@dimen/s14"
                app:typeface="@string/font_regular" />


            <com.android.structure.widget.PinEntryEditText
                android:id="@+id/txtPinCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="numberPassword"
                android:maxLength="5"
                android:minWidth="@dimen/x180dp"
                android:padding="@dimen/x20dp"
                android:textColor="@color/txtBlue"
                android:textIsSelectable="false"
                android:textSize="@dimen/s20"
                android:visibility="visible"
                app:pinLineColors="@color/txtBlue"
                app:typeface="@string/font_bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/contLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/x10dp"
            android:layout_marginTop="@dimen/x10dp"
            android:gravity="center">

            <com.android.structure.widget.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Forgot Pin? "
                android:textColor="@color/base_amber"
                android:textSize="14sp" />

            <com.android.structure.widget.AnyTextView
                android:id="@+id/txtLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logout_underline"
                android:textColor="@color/base_amber"
                android:textSize="@dimen/s14" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/contButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.android.structure.widget.AnyTextView
                android:id="@+id/txtSave"
                android:layout_width="@dimen/x90dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="@dimen/x10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_box_filled_btn_blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="OK"
                android:textColor="@color/c_white"
                android:visibility="gone"
                android:textSize="14sp" />

            <com.android.structure.widget.AnyTextView
                android:id="@+id/txtCancel"
                android:layout_width="@dimen/x90dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/x10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_box_filled_btn_amber"
                android:gravity="center"
                android:padding="10dp"
                android:text="Cancel"
                android:textColor="@color/c_white"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
